--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,26 +30,53 @@ excludes=
 file.reference.-poi-4.1.0=D:\\poi-4.1.0
 file.reference.AbsoluteLayout.jar=C:\\Program Files\\NetBeans 8.0.2\\java\\modules\\ext\\AbsoluteLayout.jar
 file.reference.activation-1.1.1.jar=D:\\poi-4.1.0\\lib\\activation-1.1.1.jar
+file.reference.activation-1.1.1.jar-1=F:\\ProjectJava\\poi-4.1.0\\lib\\activation-1.1.1.jar
 file.reference.commons-codec-1.12.jar=D:\\poi-4.1.0\\lib\\commons-codec-1.12.jar
+file.reference.commons-codec-1.12.jar-1=F:\\ProjectJava\\poi-4.1.0\\lib\\commons-codec-1.12.jar
 file.reference.commons-collections4-4.3.jar=D:\\poi-4.1.0\\lib\\commons-collections4-4.3.jar
+file.reference.commons-collections4-4.3.jar-1=F:\\ProjectJava\\poi-4.1.0\\lib\\commons-collections4-4.3.jar
 file.reference.commons-compress-1.18.jar=D:\\poi-4.1.0\\lib\\commons-compress-1.18.jar
+file.reference.commons-compress-1.18.jar-1=F:\\ProjectJava\\poi-4.1.0\\lib\\commons-compress-1.18.jar
 file.reference.commons-logging-1.2.jar=D:\\poi-4.1.0\\lib\\commons-logging-1.2.jar
+file.reference.commons-logging-1.2.jar-1=F:\\ProjectJava\\poi-4.1.0\\lib\\commons-logging-1.2.jar
 file.reference.commons-math3-3.6.1.jar=D:\\poi-4.1.0\\lib\\commons-math3-3.6.1.jar
+file.reference.commons-math3-3.6.1.jar-1=F:\\ProjectJava\\poi-4.1.0\\lib\\commons-math3-3.6.1.jar
 file.reference.curvesapi-1.06.jar=D:\\poi-4.1.0\\ooxml-lib\\curvesapi-1.06.jar
+file.reference.curvesapi-1.06.jar-1=F:\\ProjectJava\\poi-4.1.0\\ooxml-lib\\curvesapi-1.06.jar
 file.reference.jaxb-api-2.3.0.jar=D:\\poi-4.1.0\\lib\\jaxb-api-2.3.0.jar
+file.reference.jaxb-api-2.3.0.jar-1=F:\\ProjectJava\\poi-4.1.0\\lib\\jaxb-api-2.3.0.jar
 file.reference.jaxb-core-2.3.0.1.jar=D:\\poi-4.1.0\\lib\\jaxb-core-2.3.0.1.jar
+file.reference.jaxb-core-2.3.0.1.jar-1=F:\\ProjectJava\\poi-4.1.0\\lib\\jaxb-core-2.3.0.1.jar
 file.reference.jaxb-impl-2.3.0.1.jar=D:\\poi-4.1.0\\lib\\jaxb-impl-2.3.0.1.jar
+file.reference.jaxb-impl-2.3.0.1.jar-1=F:\\ProjectJava\\poi-4.1.0\\lib\\jaxb-impl-2.3.0.1.jar
 file.reference.jcalendar-1.4.jar=D:\\jcalendar-1.4.jar
 file.reference.junit-4.12.jar=D:\\poi-4.1.0\\lib\\junit-4.12.jar
+file.reference.junit-4.12.jar-1=F:\\ProjectJava\\poi-4.1.0\\lib\\junit-4.12.jar
 file.reference.log4j-1.2.17.jar=D:\\poi-4.1.0\\lib\\log4j-1.2.17.jar
+file.reference.log4j-1.2.17.jar-1=F:\\ProjectJava\\poi-4.1.0\\lib\\log4j-1.2.17.jar
 file.reference.mysql-connector-java-8.0.15.jar=D:\\mysql-connector-java-8.0.15.jar
+file.reference.mysql-connector-java-8.0.15.jar-1=F:\\D\\mysql-connector-java-8.0.15.jar
+file.reference.mysql-connector-java-8.0.15.jar-2=F:\\ProjectJava\\mysql-connector-java-8.0.15.jar
 file.reference.poi-4.1.0.jar=D:\\poi-4.1.0\\poi-4.1.0.jar
+file.reference.poi-4.1.0.jar-1=F:\\D\\poi-4.1.0\\poi-4.1.0.jar
+file.reference.poi-4.1.0.jar-2=F:\\ProjectJava\\poi-4.1.0\\poi-4.1.0.jar
 file.reference.poi-examples-4.1.0.jar=D:\\poi-4.1.0\\poi-examples-4.1.0.jar
+file.reference.poi-examples-4.1.0.jar-1=F:\\D\\poi-4.1.0\\poi-examples-4.1.0.jar
+file.reference.poi-examples-4.1.0.jar-2=F:\\ProjectJava\\poi-4.1.0\\poi-examples-4.1.0.jar
 file.reference.poi-excelant-4.1.0.jar=D:\\poi-4.1.0\\poi-excelant-4.1.0.jar
+file.reference.poi-excelant-4.1.0.jar-1=F:\\D\\poi-4.1.0\\poi-excelant-4.1.0.jar
+file.reference.poi-excelant-4.1.0.jar-2=F:\\ProjectJava\\poi-4.1.0\\poi-excelant-4.1.0.jar
 file.reference.poi-ooxml-4.1.0.jar=D:\\poi-4.1.0\\poi-ooxml-4.1.0.jar
+file.reference.poi-ooxml-4.1.0.jar-1=F:\\D\\poi-4.1.0\\poi-ooxml-4.1.0.jar
+file.reference.poi-ooxml-4.1.0.jar-2=F:\\ProjectJava\\poi-4.1.0\\poi-ooxml-4.1.0.jar
 file.reference.poi-ooxml-schemas-4.1.0.jar=D:\\poi-4.1.0\\poi-ooxml-schemas-4.1.0.jar
+file.reference.poi-ooxml-schemas-4.1.0.jar-1=F:\\D\\poi-4.1.0\\poi-ooxml-schemas-4.1.0.jar
+file.reference.poi-ooxml-schemas-4.1.0.jar-2=F:\\ProjectJava\\poi-4.1.0\\poi-ooxml-schemas-4.1.0.jar
 file.reference.poi-scratchpad-4.1.0.jar=D:\\poi-4.1.0\\poi-scratchpad-4.1.0.jar
+file.reference.poi-scratchpad-4.1.0.jar-1=F:\\D\\poi-4.1.0\\poi-scratchpad-4.1.0.jar
+file.reference.poi-scratchpad-4.1.0.jar-2=F:\\ProjectJava\\poi-4.1.0\\poi-scratchpad-4.1.0.jar
 file.reference.xmlbeans-3.1.0.jar=D:\\poi-4.1.0\\ooxml-lib\\xmlbeans-3.1.0.jar
+file.reference.xmlbeans-3.1.0.jar-1=F:\\ProjectJava\\poi-4.1.0\\ooxml-lib\\xmlbeans-3.1.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -75,7 +102,34 @@ javac.classpath=\
     ${file.reference.curvesapi-1.06.jar}:\
     ${file.reference.xmlbeans-3.1.0.jar}:\
     ${file.reference.-poi-4.1.0}:\
-    ${file.reference.AbsoluteLayout.jar}
+    ${file.reference.AbsoluteLayout.jar}:\
+    ${file.reference.mysql-connector-java-8.0.15.jar-1}:\
+    ${file.reference.poi-4.1.0.jar-1}:\
+    ${file.reference.poi-examples-4.1.0.jar-1}:\
+    ${file.reference.poi-excelant-4.1.0.jar-1}:\
+    ${file.reference.poi-ooxml-4.1.0.jar-1}:\
+    ${file.reference.poi-ooxml-schemas-4.1.0.jar-1}:\
+    ${file.reference.poi-scratchpad-4.1.0.jar-1}:\
+    ${file.reference.mysql-connector-java-8.0.15.jar-2}:\
+    ${file.reference.poi-4.1.0.jar-2}:\
+    ${file.reference.poi-examples-4.1.0.jar-2}:\
+    ${file.reference.poi-excelant-4.1.0.jar-2}:\
+    ${file.reference.poi-ooxml-4.1.0.jar-2}:\
+    ${file.reference.poi-ooxml-schemas-4.1.0.jar-2}:\
+    ${file.reference.poi-scratchpad-4.1.0.jar-2}:\
+    ${file.reference.activation-1.1.1.jar-1}:\
+    ${file.reference.commons-codec-1.12.jar-1}:\
+    ${file.reference.commons-collections4-4.3.jar-1}:\
+    ${file.reference.commons-compress-1.18.jar-1}:\
+    ${file.reference.commons-logging-1.2.jar-1}:\
+    ${file.reference.commons-math3-3.6.1.jar-1}:\
+    ${file.reference.jaxb-api-2.3.0.jar-1}:\
+    ${file.reference.jaxb-core-2.3.0.1.jar-1}:\
+    ${file.reference.jaxb-impl-2.3.0.1.jar-1}:\
+    ${file.reference.junit-4.12.jar-1}:\
+    ${file.reference.log4j-1.2.17.jar-1}:\
+    ${file.reference.curvesapi-1.06.jar-1}:\
+    ${file.reference.xmlbeans-3.1.0.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
