han kien xong  qlbl

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -50,6 +50,7 @@ file.reference.jaxb-core-2.3.0.1.jar-1=F:\\ProjectJava\\poi-4.1.0\\lib\\jaxb-cor
 file.reference.jaxb-impl-2.3.0.1.jar=D:\\poi-4.1.0\\lib\\jaxb-impl-2.3.0.1.jar
 file.reference.jaxb-impl-2.3.0.1.jar-1=F:\\ProjectJava\\poi-4.1.0\\lib\\jaxb-impl-2.3.0.1.jar
 file.reference.jcalendar-1.4.jar=D:\\jcalendar-1.4.jar
+file.reference.jcalendar-1.4.jar-1=F:\\ProjectJava\\jcalendar-1.4.jar
 file.reference.junit-4.12.jar=D:\\poi-4.1.0\\lib\\junit-4.12.jar
 file.reference.junit-4.12.jar-1=F:\\ProjectJava\\poi-4.1.0\\lib\\junit-4.12.jar
 file.reference.log4j-1.2.17.jar=D:\\poi-4.1.0\\lib\\log4j-1.2.17.jar
@@ -129,7 +130,8 @@ javac.classpath=\
     ${file.reference.junit-4.12.jar-1}:\
     ${file.reference.log4j-1.2.17.jar-1}:\
     ${file.reference.curvesapi-1.06.jar-1}:\
-    ${file.reference.xmlbeans-3.1.0.jar-1}
+    ${file.reference.xmlbeans-3.1.0.jar-1}:\
+    ${file.reference.jcalendar-1.4.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
